# foreign-types

./: Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
foreign-types/: Cargo.toml
foreign-types-macros/: Cargo.toml
foreign-types-macros/src/: build.rs  lib.rs  parse.rs
foreign-types-shared/: Cargo.toml
foreign-types-shared/src/: lib.rs
foreign-types/src/: lib.rs
foreign-types/tests/: test.rs
src/: lib.rs
