[package]
name = "foreign-types-macros"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "An internal crate used by foreign-types"
repository = "https://github.com/sfackler/foreign-types"

[lib]
proc-macro = true

[features]
std = []

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
