[package]
name = "foreign-types"
version = "0.3.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A framework for Rust wrappers over C APIs"
repository = "https://github.com/sfackler/foreign-types"
readme = "README.md"

[dependencies]
foreign-types-shared = { path = "../foreign-types-shared" }
